--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "eslint": "eslint --ext .ts --ignore-path .gitignore .",
+    "eslint:fix": "eslint --fix --ext .ts,.astro --ignore-path .gitignore .",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "astro": "^2.0.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.32.0",
+    "eslint-plugin-astro": "^0.23.0"
   }
 }
