--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
+    "stylelint": "stylelint **/*.scss",
+    "stylelint:fix": "stylelint --fix .scss",
     "eslint": "eslint --ext .ts --ignore-path .gitignore .",
     "eslint:fix": "eslint --fix --ext .ts,.astro --ignore-path .gitignore .",
     "prettier:write": "yarn prettier:write:ts && yarn prettier:write:astro",
@@ -26,6 +28,11 @@
     "eslint": "^8.32.0",
     "eslint-plugin-astro": "^0.23.0",
     "prettier": "^2.8.3",
-    "prettier-plugin-astro": "^0.8.0"
+    "prettier-plugin-astro": "^0.8.0",
+    "sass": "^1.57.1",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-recess-order": "^3.1.0",
+    "stylelint-config-standard-scss": "^6.1.0"
   }
 }
