--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "astro-compress": "^1.1.28",
     "eslint": "^8.32.0",
     "eslint-plugin-astro": "^0.23.0",
     "prettier": "^2.8.3",
