--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@acab/reset.css": "^0.5.3",
-    "astro": "^2.0.1"
+    "@astrojs/vue": "^2.0.1",
+    "astro": "^2.0.1",
+    "vue": "^3.2.47"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
@@ -31,6 +33,7 @@
     "eslint": "^8.32.0",
     "eslint-plugin-astro": "^0.23.0",
     "event-emitter": "^0.3.5",
+    "html2canvas": "^1.4.1",
     "prettier": "^2.8.3",
     "prettier-plugin-astro": "^0.8.0",
     "sass": "^1.57.1",
