--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -18,8 +18,8 @@ jobs:
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
-          server: ${{ secrets.STAGING_SERVER }}
-          username: ${{ secrets.STAGING_USERNAME }}
-          password: ${{ secrets.STAGING_PASSWORD }}
-          local-dir: ./dist/
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: ${{ secrets.FTP_SERVER_DIR }}
           server-dir: /
