--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "preview": "astro preview",
     "astro": "astro"
   },
+  "browserslist": [
+    "> 0.2%, not dead",
+    "not IE 11"
+  ],
   "dependencies": {
     "@acab/reset.css": "^0.5.3",
     "@astrojs/vue": "^2.0.1",
@@ -30,10 +34,12 @@
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "astro-compress": "^1.1.28",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
     "eslint-plugin-astro": "^0.23.0",
     "event-emitter": "^0.3.5",
     "html2canvas": "^1.4.1",
+    "postcss-preset-env": "^8.0.1",
     "prettier": "^2.8.3",
     "prettier-plugin-astro": "^0.8.0",
     "sass": "^1.57.1",
