fix: tsconfig の非推奨のオプションを削除

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
                 "src/layouts/*"
             ]
         },
-        "importsNotUsedAsValues": "error",
+        "ignoreDeprecations": "5.0",
         "allowJs": true
     },
 }
