feat: markuplint を導入

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "stylelint:fix": "stylelint --fix .scss",
     "eslint": "eslint --ext .ts --ignore-path .gitignore .",
     "eslint:fix": "eslint --fix --ext .ts,.astro --ignore-path .gitignore .",
+    "html:lint": "markuplint \"**/*.astro\"",
     "prettier:write": "yarn prettier:write:ts && yarn prettier:write:astro",
     "prettier:write:ts": "prettier --write 'src/**/*.ts'",
     "prettier:write:astro": "prettier --write 'src/**/*.astro'",
@@ -39,6 +40,7 @@
     "eslint-plugin-astro": "^0.23.0",
     "event-emitter": "^0.3.5",
     "html2canvas": "^1.4.1",
+    "markuplint": "^3.4.0",
     "postcss-preset-env": "^8.0.1",
     "prettier": "^2.8.3",
     "prettier-plugin-astro": "^0.8.0",
