--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-astro": "^0.26.1",
     "event-emitter": "^0.3.5",
     "html2canvas": "^1.4.1",
+    "lodash": "^4.17.21",
     "markuplint": "^3.5.0",
     "postcss-preset-env": "^8.2.0",
     "prettier": "^2.8.7",
