--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,13 @@
 {
-    "extends": "astro/tsconfigs/strict",
-    "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "@src/*": [
-                "src/*"
-            ],
-            "@components/*": [
-                "src/components/*"
-            ],
-            "@layouts/*": [
-                "src/layouts/*"
-            ]
-        },
-        "ignoreDeprecations": "5.0",
-        "allowJs": true
+  "extends": "astro/tsconfigs/strict",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@src/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@layouts/*": ["src/layouts/*"]
     },
+    "ignoreDeprecations": "5.0",
+    "allowJs": true
+  }
 }
