refactor: prettier 周りの適用範囲を修正

--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "stylelint:fix": "stylelint --fix .scss",
     "eslint": "eslint --ext .ts --ignore-path .gitignore .",
     "eslint:fix": "eslint --fix --ext .ts,.astro --ignore-path .gitignore .",
-    "html:lint": "markuplint \"**/*.astro\"",
-    "prettier:write": "yarn prettier:write:ts && yarn prettier:write:astro",
+    "markuplint": "markuplint \"**/*.astro\"",
+    "prettier:write": "npm run prettier:write:ts && npm run prettier:write:astro && npm run prettier:write:scss",
     "prettier:write:ts": "prettier --write 'src/**/*.ts'",
     "prettier:write:astro": "prettier --write 'src/**/*.astro'",
-    "prettier:check": "yarn prettier:check:ts && yarn prettier:check:astro",
+    "prettier:write:scss": "prettier --write 'src/**/*.scss'",
+    "prettier:check": "npm run prettier:check:ts && npm run prettier:check:astro && npm run prettier:check:scss",
     "prettier:check:ts": "prettier --check 'src/**/*.ts'",
     "prettier:check:astro": "prettier --check 'src/**/*.astro'",
-    "build": "astro check && tsc --noEmit && astro build",
+    "prettier:check:scss": "prettier --check 'src/**/*.scss'",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
