--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -23,3 +23,5 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ${{ secrets.FTP_SERVER_DIR }}
           server-dir: /
+          exclude: "[**/.**/**, .gitignore,  **/.git/**, **/node_modules/**, **/vendor/**, .editorconfig, README.md, .phpcs.xml.dist, **.json, **.lock, postcss.config.js, **/src/**]"
+
