--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   ],
   "dependencies": {
     "@acab/reset.css": "^0.5.3",
+    "@astrojs/check": "^0.4.1",
     "@astrojs/vue": "^4.0.4",
     "@studio-freight/lenis": "^1.0.23",
     "astro": "^4.0.6",
+    "typescript": "^5.3.3",
     "vue": "^3.2.47"
   },
   "devDependencies": {
@@ -38,7 +40,7 @@
     "@types/lodash": "^4.14.192",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
-    "astro-compress": "^2.2.5",
+    "astro-compress": "2.2.7",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.37.0",
     "eslint-plugin-astro": "^0.31.0",
